@@ -452,6 +452,8 @@ static int pathcmp(const char *encpath, const char *comparison) {
     return strcmp(p1, comparison);
 }
 
+#define IS_MUSL R_OS =="linux-musl"
+
 static void seticonvName(const char *encpath, char *convname)
 {
     /*
@@ -459,24 +461,54 @@ static void seticonvName(const char *encpath, char *convname)
      */
     char *p;
     strcpy(convname, "latin1");
-    if(pathcmp(encpath, "ISOLatin1")==0)
-	strcpy(convname, "latin1");
-    else if(pathcmp(encpath, "ISOLatin2")==0)
-	strcpy(convname, "latin2");
-    else if(pathcmp(encpath, "ISOLatin7")==0)
-	strcpy(convname, "latin7");
-    else if(pathcmp(encpath, "ISOLatin9")==0)
-	strcpy(convname, "latin-9");
-    else if (pathcmp(encpath, "WinAnsi")==0)
-	strcpy(convname, "CP1252");
-    else {
-	/*
-	 * Last resort = trim .enc off encpath to produce convname
-	 */
-	strcpy(convname, encpath);
-	p = strrchr(convname, '.');
-	if(p) *p = '\0';
+    if(streql(R_OS, "linux-musl")) {
+	if(pathcmp(encpath, "ISOLatin1") == 0)
+	    strcpy(convname, "latin1");
+	else if(pathcmp(encpath, "ISOLatin2") == 0)
+	    strcpy(convname, "iso88592");
+	else if(pathcmp(encpath, "ISOLatin7") == 0)
+	    strcpy(convname, "iso885913");
+	else if(pathcmp(encpath, "ISOLatin9") == 0)
+	    strcpy(convname, "iso885915");
+	else if (pathcmp(encpath, "WinAnsi") == 0)
+	    strcpy(convname, "cp1252");
+	else if(pathcmp(encpath, "Greek") == 0)
+	    strcpy(convname, "iso88597");
+	else if(pathcmp(encpath, "Cyrillic") == 0)
+	    strcpy(convname, "iso88595");
+	else {
+	    /*
+	     * Last resort = trim .enc off encpath to produce convname
+	     */
+	    strcpy(convname, encpath);
+	    p = strrchr(convname, '.');
+	    if(p) *p = '\0';
+	}
+    } else {
+	if(pathcmp(encpath, "ISOLatin1") == 0)
+	    strcpy(convname, "latin1");
+	else if(pathcmp(encpath, "ISOLatin2") == 0)
+	    strcpy(convname, "latin2");
+	else if(pathcmp(encpath, "ISOLatin7") == 0)
+	    strcpy(convname, "latin7");
+	else if(pathcmp(encpath, "ISOLatin9") == 0)
+	    strcpy(convname, "latin-9");
+	else if (pathcmp(encpath, "WinAnsi") == 0)
+	    strcpy(convname, "CP1252");
+	else if(pathcmp(encpath, "Greek") == 0)
+	    strcpy(convname, "iso-8859-7");
+	else if(pathcmp(encpath, "Cyrillic") == 0)
+	    strcpy(convname, "iso-8859-5");
+	else {
+	    /*
+	     * Last resort = trim .enc off encpath to produce convname
+	     */
+	    strcpy(convname, encpath);
+	    p = strrchr(convname, '.');
+	    if(p) *p = '\0';
+	}
     }
+    //fprintf(stderr, "mapping %s to %s\n", encpath, convname);
 }
 
 /* Load encoding array from a file: defaults to the R_HOME/library/grDevices/afm directory */
